2004-07-07  Vincent Noel  <vnoel@cox.net>

	* src/command_line.c (mc_command_update_entry_size): use a
	different size requisition for the entry line depending on the
	panel orientation.

	* src/mini-commander_applet.h: added an element to track panel
	orientation to the MCData struct.

	* src/mini-commander_applet.c (mc_applet_draw): Layout the applet
	differently depending on the panel orientation.
	(mc_orient_changed): added function to track panel orientation changes.
	(mc_pixel_size_changed): follow the panel size using
	size-allocate signal.

2004-06-17  Dennis Smit  <ds@nerds-incorporated.org>

	* src/exec (mc_exec_command, beep): Check gdk_spawn_on_screen,
	so that we get errors when command fails and give an error indicator,
	clear the text only if command succeeds. System bell will sound when
	(?) is displayed.

	* src/command_line.c (button_press_cb): Clear the indicator
	when clicked.

	* src/command_line.c (command_key_event): The cursor position
	is saved when adding the (?).

	Patch by: Vinay M R  <vinay.mandyakoppal@wipro.com>

	Fixes bug #130965.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* src/about.c (about_box): Cleared a stray / in
	the about text.

	Fixes bug #134453.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	Applied patch to fix ally issues for bug #135366.

	Patch by: Padraig O'Briain  <padraig.obriain@sun.com>

2004-05-27  Dennis Smit  <ds@nerds-incorporated.org>

	Removed the show_handle and show_frame preferences and support
	for these preferences. Fixes bug #135393.

2004-05-16  Davyd Madeley  <davyd@ucc.asn.au>

	* src/mc-default-macros.h: Use more sensible macros. Use gnome-open
	for things (instead of mozilla); add a google: option; take out a few
	"not-very-GNOMEy" macros.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* help/ja/*: Put back the ja docs as well since the orignal author didn't
	get back to me.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>
