@@ -1,3 +1,10 @@
+2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/command_line.c: (mc_show_history): use g_signal_connect_*.
+	* src/exec.c: (beep): ANSIfication.
+	* src/mini-commander_applet.c: (command_line_init_stock_icons):
+	ANSIfication.
+
 2004-07-07  Vincent Noel  <vnoel@cox.net>
 
 	* src/command_line.c (mc_command_update_entry_size): use a
